hipstershop-istio-1.0.3-gke/respy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: respy
spec:
  replicas: 1
  template:
    metadata:
     labels:
        app: respy
    spec:
      containers:
      - name: respy
        image: gcr.io/next19-istio-traffic/respy:0.0.2
        imagePullPolicy: Always
